fixed garnishes overflowing container at 4+

--- a/css/index.css
+++ b/css/index.css
@@ -184,6 +184,11 @@ h1, h2, h3{
 
 }
 
+.garnish {
+
+    flex-wrap: wrap;
+}
+
 .incorrect{
     color: var(--red);
 }
